--- a/style.css
+++ b/style.css
@@ -11,6 +11,21 @@
 
 	/* Width of most decorative divs, all borders and some border radiuses. */
 	--strokeWidth: 3px;
+
+	/* Width of sidebar. */
+	--sidebarWidth: calc(10em + 10vw);
+
+	/* Height of background image and gradient.*/
+	--backgroundHeight: 15vw;
+
+	/* A value that affects margin/padding on all elements. */
+	--spaceModifier: calc(3vw + 1em);
+
+	/* Bold text is illegal. */
+	font-weight: normal;
+	font-family: Arial, Helvetica, sans-serif;
+
+	scroll-behavior: smooth;
 }
 
 /* Sets some frequently used default parameters. */
@@ -19,19 +34,14 @@ body {
 	padding: 0px;
 
 	color: var(--primaryLight);
-	font-family: Arial, Helvetica, sans-serif;
-
-	float: left;
-
-	scroll-behavior: smooth;
 	overflow-y: scroll;
 }
 
 /* Background body, leaves space for sidebar iframe. */
 body.frame {
 	max-width: 100%;
-	padding: 2em;
-	padding-right: calc(12em + 10vw);
+	padding: var(--spaceModifier);
+	padding-right: calc(var(--spaceModifier) + var(--sidebarWidth));
 
 	background-color: var(--secondaryDark);
 
@@ -40,10 +50,11 @@ body.frame {
 
 /* Background div, leaves space for top background image. */
 div.frame {
-	width: calc(100% - 4em - var(--strokeWidth) * 2);
+	width: calc(100% - (var(--spaceModifier) - var(--strokeWidth)) * 2);
 
-	margin-top: 10vw;
-	padding: 2em;
+	margin-top: calc(var(--backgroundHeight) - (var(--spaceModifier) * 2));
+	padding: var(--spaceModifier);
+
 	background-color: var(--primaryDark);
 
 	border: var(--strokeWidth) var(--primaryColor);
@@ -52,17 +63,21 @@ div.frame {
 	border-left-style: solid;
 	border-right-style: solid;
 
-	float: left;
+	/* New fancy 'clearfix hack' */
+	content: "";
+	clear: both;
+	display: table;
+
 	position: relative;
 }
 
 /* Gradient at bottom of top background image, purely decorative. */
 div.backgroundGradient {
 	left: 0px;
-	width: calc(90% - 10em);
+	width: calc(100vw - var(--sidebarWidth));
 
-	top: calc(10vw);
-	height: 4em;
+	top: calc(var(--backgroundHeight) - (var(--spaceModifier) * 2));
+	height: calc(var(--spaceModifier) * 2);
 
 	background-image: linear-gradient(#00000000, var(--secondaryDark));
 
@@ -77,9 +92,9 @@ img.logo {
 /* Wide background image at top of layot.
 FIX: Functionality on firefox. */
 img.backgroundImage {
-	width: calc(90% - 10em);
-	height: calc(10vw + 4em);
-	margin: -2em;
+	width: calc(100vw - var(--sidebarWidth));
+	height: calc(var(--backgroundHeight) - 1px);
+	margin: calc(0px - var(--spaceModifier));
 
 	z-index: -1;
 	
@@ -90,7 +105,7 @@ img.backgroundImage {
 /* Locks sidebar in place on the right. */
 iframe.sidebar {
 	right: 0px;
-	width: calc(10em + 10vw);
+	width: var(--sidebarWidth);
 
 	top: 0px;
 	height: 100%;
@@ -103,12 +118,7 @@ iframe.modBox {
 	width: 15em;
 	height: 25em;
 
-	margin: 0.2em;
-}
-
-iframe.modPreview {
-	width: 100%;
-	height: 50em;
+	margin: calc(var(--spaceModifier) / 10);
 }
 
 /* Makes a general button template with slight 3D effect. */
@@ -116,12 +126,12 @@ button {
 	padding: 0.3em;
 
 	border: none;
-	border-bottom: solid var(--strokeWidth);
 	outline: none;
 
-	font-size: 0.9em;
-	font-weight: lighter;
+	border-bottom: solid var(--strokeWidth);
 	vertical-align: text-top;
+
+	font-size: 0.9em;
 
 	z-index: 5;
 	position: relative;
@@ -129,12 +139,8 @@ button {
 
 button:active {
 	margin-top: var(--strokeWidth);
+	margin-bottom: calc(0px - var(--strokeWidth));
 	border: none;
-}
-
-/* Bold text is illegal. */
-h1, h2, h3 {
-	font-weight: normal;
 }
 
 /* Fixes nicer looking links, underline is not always added with a:hover. */
